--- a/_sass/minima/leaf/_auto-dark.scss
+++ b/_sass/minima/leaf/_auto-dark.scss
@@ -1,4 +1,4 @@
-$high-emph: rgba(white, 0.87);
+$high-emph: rgba(rgb(230, 35, 248), 0.87);
 $med-emph: rgba(white, 0.69); 
 $low-emph: rgba(white, 0.38);
 $dark-grey : #121212; 
