changed lopez level images

--- a/_includes/nav_home.html
+++ b/_includes/nav_home.html
@@ -5,5 +5,6 @@
         <td><a href="{{site.baseurl}}/navigation/csp">CSP</a></td>
         <td><a href="{{site.baseurl}}/navigation/csa">CSA</a></td>
         <td><a href="{{site.baseurl}}/navigation/game">Game</a></td>
+        <td><a href="{{site.baseurl}}/navigation/game2">Mario Game</a></td>
     </tr>
 </table>
